--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "crypto-portal-new",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "Crypto Portal project",
   "author": "김성준 <methodtweak@naver.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "vue"  : "NODE_ENV=development pm2 start webpack-dev-server",
+    "pm"   : "NODE_ENV=development pm2 start webpack-dev-server --node-args=\"--inline --progress --config build/webpack.dev.conf.js\"",
+    "pm2"  : "NODE_ENV=development pm2 start webpack-dev-server --node-args=\"--inline --progress --config build/webpack.dev.conf.js\"",
+    "dev"  : "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "lint": "eslint --ext .js,.vue src",
+    "lint" : "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
