--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "김성준 <methodtweak@naver.com>",
   "private": true,
   "scripts": {
-    "vue"  : "NODE_ENV=development pm2 start webpack-dev-server",
-    "pm"   : "NODE_ENV=development pm2 start webpack-dev-server --node-args=\"--inline --progress --config build/webpack.dev.conf.js\"",
-    "pm2"  : "NODE_ENV=development pm2 start webpack-dev-server --node-args=\"--inline --progress --config build/webpack.dev.conf.js\"",
-    "dev"  : "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "vue": "NODE_ENV=development pm2 start webpack-dev-server",
+    "pm": "NODE_ENV=development pm2 start webpack-dev-server --node-args=\"--inline --progress --config build/webpack.dev.conf.js\"",
+    "pm2": "NODE_ENV=development pm2 start webpack-dev-server --node-args=\"--inline --progress --config build/webpack.dev.conf.js\"",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "lint" : "eslint --ext .js,.vue src",
+    "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
@@ -56,6 +56,7 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-adsense": "^1.0.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
