--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "private": true,
   "scripts": {
     "vue": "NODE_ENV=development pm2 start webpack-dev-server",
-    "pm2": "NODE_ENV=development pm2 start webpack-dev-server --node-args=\"--inline --progress --config build/webpack.dev.conf.js\"",
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "start": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
@@ -57,7 +55,6 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-adsense": "^1.0.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
