--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue": "^2.5.2",
     "vue-google-adsense": "^1.4.5",
     "vue-router": "^3.0.1",
-    "vue-script2": "^2.0.3"
+    "vue-script2": "^2.0.3",
+    "cheerio": "1.0.0-rc.2",
+    "iconv": "2.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
